--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/7/71/Flag_of_Ethiopia.svg" type="image/jpeg" />
+    <link rel="icon" href="https://semi.et/static-assets/ethio.png" type="image/jpeg" />
     <link rel="apple-touch-icon" href="/pngtree-ethiopia-transparent-watercolor-stroke-brush-png-image_3812902.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
